After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744195 - Uses deprecated GtkArrow and compiled with -DGTK_DISABLE_DEPRECATED
Uses deprecated GtkArrow and compiled with -DGTK_DISABLE_DEPRECATED
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
git master
Other Linux
: Normal critical
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2015-02-09 23:03 UTC by Robert Ancell
Modified: 2015-03-09 16:41 UTC
See Also:
GNOME target: 3.16
GNOME version: ---



Description Robert Ancell 2015-02-09 23:03:13 UTC
libegg/egg-datetime.c uses GtkArrow which is deprecated since GTK+ 3.14 and is compiled with -DGTK_DISABLE_DEPRECATED which gives warnings like this:

libegg/egg-datetime.c: In function 'egg_datetime_init':
libegg/egg-datetime.c:504:4: warning: implicit declaration of function 'gtk_arrow_new' [-Wimplicit-function-declaration]
    arrow = gtk_arrow_new (GTK_ARROW_DOWN, GTK_SHADOW_OUT);

This can segfault on architectures where the size of
a pointer is greater than the size of an integer, such as ia64 and amd64.
Comment 1 Robert Ancell 2015-02-09 23:03:41 UTC
Upstream libegg bug 744194
Comment 2 Milan Crha 2015-03-09 10:48:32 UTC
It causes a crash here, as soon as picking File->New->PGP Key->Create:

  • #0 gtk_container_add
  • #1 egg_datetime_init
  • #2 g_type_create_instance
  • #3 g_object_new_internal
  • #4 g_object_newv
  • #5 g_object_new
  • #6 egg_datetime_new_from_time_t
  • #7 seahorse_gpgme_generate_show
  • #8 g_closure_invoke
  • #9 signal_emit_unlocked_R
  • #10 g_signal_emit_valist
  • #11 g_signal_emit
  • #12 _gtk_action_emit_activate
  • #13 seahorse_action_activate_with_window
  • #14 on_response

Comment 3 Matthias Clasen 2015-03-09 11:59:33 UTC
the expedient fix is to not build with -DGTK_DISABLE_DEPRECATED