EggDatetime: Don't use deprecated GtkArrow

Instead, just use a suitable GtkImage.

https://bugzilla.gnome.org/show_bug.cgi?id=744195